@@ -1,13 +1,5 @@
-<!-- RELEASE_TAG: v0.1.4 -->
-# Release v0.1.4 — 2026-05-22
+<!-- RELEASE_TAG: v0.2.0 -->
+# Release v0.2.0 — 2026-05-22
 
 ### ✨ Nuevas funcionalidades
-- allow manual trigger of verify-release against latest published release
-
-### 🐛 Correcciones
-- register Panama FFM downcall stubs for GraalVM 25
-- replace workflow_run with explicit dispatch to prevent spurious triggers
-- correct verify-release workflow file issue
-
-### 📝 Documentación
-- document Raspberry Pi support — 64-bit OS required, arm32 not possible
+- target Java 21 + --enable-preview (Panama FFM JEP 442)
